--- a/index.html
+++ b/index.html
@@ -5,25 +5,24 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Presentatie woensdag 26-10-2016</title>
     <meta name="author" content="Judith Crooy" />
-    <meta name="description" content="Explanation about jQuery and AJAX for the MS70-480 exam" />
-    <meta name="keywords" content="jquery, 70-480, AJAX, webdesign" />
+    <meta name="description" content="Eindpresentatie ProgramIt Java" />
+    <meta name="keywords" content="Java, programIt" />
     <meta name="Resource-type" content="Document" />
 
 
-    <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
+    <link rel="stylesheet" type="text/css" href="jquery.fullPage.min.css" />
     <link rel="stylesheet" type="text/css" href="examples.css" />
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
     <script src="jquery.fullPage.min.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="styles.css" />
 
     <script type="text/javascript">
         $(document).ready(function() {
 
             $('#fullpage').fullpage({
-                sectionsColor: ['lightgreen', 'aqua', '#5AB1BB', '#DDD8C4', '#5AB1BB'],
-                anchors: ['home', 'about-jQuery', 'ajax', 'hands-on', 'links'],
+                sectionsColor: ['lightgreen', 'aqua', '#5AB1BB', '#DDD8C4', '#93c6d6', '#2998ce'],
+                anchors: ['home', 'Aanloop', 'OCA', 'Zomerproject', 'Praktijkopdracht', 'Smoelenboek'],
                 menu: '#menu',
                 scrollingSpeed: 1000
             });
@@ -37,7 +36,7 @@
     <!--Dit is het navigatiemenu links boven -->
     <ul id="menu">
         <li data-menuanchor="home"><a href="#home">Home</a></li>
-        <li data-menuanchor="De aanloop"><a href="#section1">De aanloop</a></li>
+        <li data-menuanchor="De-aanloop"><a href="#section1">De aanloop</a></li>
         <li data-menuanchor="OCA"><a href="#section2">OCA</a></li>
         <li data-menuanchor="Zomerproject"><a href="#section3">Zomerproject</a></li>
         <li data-menuanchor="Praktijkopdracht"><a href="#section4">Praktijkopdracht</a></li>
@@ -93,9 +92,10 @@
                     <div class="button-sm">Eerste opdrachten</div><br/>
                 </div>
             </div>
-		</div> <!--End of section 1 -->
+        </div>
+        <!--End of section 1 -->
 
-     <div class="section" id="section2">
+        <div class="section" id="section2">
             <h1>OCA Examen</h1>
         </div>
 
@@ -107,7 +107,7 @@
                 <p>Samenwerking tussen Eindhoven en Enschede</p>
                 <p>70-480 certificering: HTML5, Javascript, CSS3</p>
                 <br>
-                <img src="img/70-480_boek.jpg" alt="70-480 Examenboek">
+                <img src="imgs/70-480_boek.jpg" alt="70-480 Examenboek">
             </div>
             <div class="slide">
                 <h1>Doelen</h1>
@@ -129,7 +129,7 @@
                 <h1>HTML5</h1>
                 <p>Diverse onderwerpen gerelateerd aan de structuur van je webpagina</p>
                 <p>Bijvoorbeeld: semantische mark-up, SEO, canvas, SVG, HTML5 API's</p>
-                <img src="img/HTML5.png" class="plaatje" alt="HTML5 semantische mark-up">
+                <img src="imgs/HTML5.png" class="plaatje" alt="HTML5 semantische mark-up">
 
             </div>
             <div class="slide">
@@ -150,7 +150,7 @@
                 <p>Werken met cascading style sheets, specifiek CSS3</p>
                 <p>Bijvoorbeeld: styling, lay-out, animaties</p>
                 <br>
-                <img src="img/No_CSS.png" class="plaatje" alt="Zonder CSS">
+                <img src="imgs/No_CSS.png" class="plaatje" alt="Zonder CSS">
             </div>
             <div class="slide">
                 <h1>Resultaat</h1>
