--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="Resource-type" content="Document" />
 
 
-    <link rel="stylesheet" type="text/css" href="jquery.fullPage.min.css" />
+    <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
     <link rel="stylesheet" type="text/css" href="examples.css" />
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -51,7 +51,6 @@
             <h2> Eindhoven Java 2</h2>
             <input type="hidden" name="id" value="1" />
             <img class="foto" src="imgs/teamfotoArdennen.jpg" alt="Teamfoto Ardennen" />
-
         </div>
 
         <!-- Hier begint de eerste sectie, met sliders -->
@@ -92,8 +91,7 @@
                     <div class="button-sm">Eerste opdrachten</div><br/>
                 </div>
             </div>
-        </div>
-        <!--End of section 1 -->
+        </div> <!--End of section 1 -->
 
         <div class="section" id="section2">
             <h1>OCA Examen</h1>
