Add section5 'De Javanen'

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 			$('#fullpage').fullpage({
 				sectionsColor: ['lightgreen', 'aqua', '#5AB1BB', '#DDD8C4', '#5AB1BB'],
-				 anchors: ['home', 'about-jQuery', 'ajax', 'hands-on', 'links'],
+				 anchors: ['home', 'about-jQuery', 'ajax', 'hands-on', 'links', 'javanen'],
 				menu: '#menu',
 				scrollingSpeed: 1000
 			});
@@ -51,6 +51,7 @@
 	<li data-menuanchor="ajax"><a href="#section2">Ajax</a></li>
 	<li data-menuanchor="hands-on"><a href="#section3">Hands-On</a></li>
 	<li data-menuanchor="links"><a href="#section4">Links</a></li>
+	<li data-menuanchor="javanen"><a href="#section5">De Javanen</a></li>
 </ul>
 
 
@@ -238,6 +239,12 @@
 			<img src="imgs/google.jpg" class='cartoon' alt="Google is your friend"/>
 			<h3>Remember: Google is your friend.</h3>
 		</div>
+	</div>
+
+	
+	<div class="section" id="section5">
+		<h1>Dit zijn wij</h1>
+		<img src="imgs/flyer.png" class="picture" alt="Overzicht van de 2e groep Eindhovense Javanen">
 	</div>
 		
 </div>
