--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     <meta name="keywords" content="Java, programIt" />
     <meta name="Resource-type" content="Document" />
 
-
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
     <link rel="stylesheet" type="text/css" href="examples.css" />
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
     <script src="jquery.fullPage.min.js"></script>
 
     <script type="text/javascript">
@@ -64,8 +63,7 @@
                     <p>uiteindelijk 12 personen werden geselecteerd</p>
                     <br/>
                     <div class="button">Selectie</div><br>
-                    <div class="button">Bootcamp</a>
-                    </div><br>
+                    <div class="button">Bootcamp</a></div><br>
                     <div class="button">Ardennenweek</div><br>
                 </div>
             </div>
@@ -91,7 +89,8 @@
                     <div class="button-sm">Eerste opdrachten</div><br/>
                 </div>
             </div>
-        </div> <!--End of section 1 -->
+        </div>
+        <!--End of section 1 -->
 
         <div class="section" id="section2">
             <h1>OCA Examen</h1>
