basis staat klaar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="Resource-type" content="Document" />
 
 
-    <link rel="stylesheet" type="text/css" href="jquery.fullPage.min.css" />
+    <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
     <link rel="stylesheet" type="text/css" href="examples.css" />
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -65,8 +65,7 @@
                     <p>uiteindelijk 12 personen werden geselecteerd</p>
                     <br/>
                     <div class="button">Selectie</div><br>
-                    <div class="button">Bootcamp</a>
-                    </div><br>
+                    <div class="button">Bootcamp</a></div><br>
                     <div class="button">Ardennenweek</div><br>
                 </div>
             </div>
@@ -95,11 +94,13 @@
         </div>
         <!--End of section 1 -->
 
+		<!-- Start of section 2 -->
         <div class="section" id="section2">
             <h1>OCA Examen</h1>
         </div>
+		<!--End of section 2 -->
 
-
+		<!-- Start of section 3 -->
         <div class="section" id="section3">
 
             <div class="slide">
@@ -161,13 +162,19 @@
         </div>
         <!--End of section 3-->
 
+		<!-- start of section 4 -->
         <div class="section" id="section4">
             <h1>Praktijkopdracht</h1>
         </div>
+		<!--End of section 4 -->
 
+		<!-- start of section 5 -->
         <div class="section" id="section5">
             <h1>TODO: Smoelenboek</h1>
         </div>
+		<!--End of section 5 -->
+
+
     </div>
 
     </div>
