--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                     <p>uiteindelijk 12 personen werden geselecteerd</p>
                     <br/>
                     <div class="button">Selectie</div><br>
-                    <div class="button">Bootcamp</a></div><br>
+                    <div class="button">Bootcamp</a>
+                    </div><br>
                     <div class="button">Ardennenweek</div><br>
                 </div>
             </div>
