--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Presentatie woensdag 26-10-2016</title>
-    <meta name="author" content="Judith Crooy" />
+    <meta name="author" content="ProgramIt" />
     <meta name="description" content="Eindpresentatie ProgramIt Java" />
     <meta name="keywords" content="Java, programIt" />
     <meta name="Resource-type" content="Document" />
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
     <link rel="stylesheet" type="text/css" href="examples.css" />
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
     <script src="jquery.fullPage.min.js"></script>
 
@@ -20,10 +20,10 @@
         $(document).ready(function() {
 
             $('#fullpage').fullpage({
-                sectionsColor: ['lightgreen', 'aqua', '#5AB1BB', '#DDD8C4', '#93c6d6', '#2998ce'],
-                anchors: ['home', 'Aanloop', 'OCA', 'Zomerproject', 'Praktijkopdracht', 'Smoelenboek'],
-                menu: '#menu',
-                scrollingSpeed: 1000
+                sectionsColor: ['lightgreen', 'aqua', '#5AB1BB', '#579f2a', '#93c6d6', '#2998ce'],
+                // anchors: ['home', 'Aanloop', 'OCA', 'Zomerproject', 'Praktijkopdracht', 'Smoelenboek'],
+                // menu: '#menu',
+                // scrollingSpeed: 1000
             });
         });
     </script>
@@ -168,7 +168,6 @@
         </div>
     </div>
 
-    </div>
 
 </body>
 
