--- a/index.html
+++ b/index.html
@@ -162,7 +162,37 @@
 
 		<!-- start of section 4 -->
         <div class="section" id="section4">
-            <h1>Praktijkopdracht</h1>
+			<div class="slide">
+				<h1>Praktijkopdracht</h1>
+				<h1>Angular 2</h1>
+            </div>
+            <div class="slide">
+                <p>De knop</p><br/>
+				<img src="imgs/angular2_01.png" class="plaatje" alt="Gebouw toevoegen">
+				<p>Formulier laten zien</p><br/>
+				<img src="imgs/angular2_02.png" class="plaatje" alt="Formulier laten zien"><br/><br/>
+            </div>
+
+            <div class="slide">
+				<p>Het formulier:</p><br/>
+				<img src="imgs/angular2_03.png" class="plaatje" alt="Gebouw toevoegen">
+            </div>
+
+			<div class="slide">
+				<p>Informatie overdracht:</p><br/>
+				<img src="imgs/angular2_04.png" class="plaatje" alt="Gebouw toevoegen">
+            </div>
+
+			<div class="slide">
+				<p>De service</p><br/>
+				<img src="imgs/angular2_05.png" class="plaatje" alt="Gebouw toevoegen">
+            </div>
+
+			<div class="slide">			
+				<h1>Demo APP</h1>
+				<a href="http://test.liebregts.com:3000" target="_blank"><img src="imgs/angular2_06.png" class="plaatje" alt="Gebouw toevoegen"></a>
+            </div>
+
         </div>
 		<!--End of section 4 -->
 
