--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             $('#fullpage').fullpage({
                 sectionsColor: ['lightgreen', 'aqua', '#5AB1BB', '#579f2a', '#93c6d6', '#2998ce'],
-                // anchors: ['home', 'Aanloop', 'OCA', 'Zomerproject', 'Praktijkopdracht', 'Smoelenboek'],
+                // anchors: ['home', 'Voortraject', 'OCA', 'Zomerproject', 'Praktijkopdracht', 'Smoelenboek'],
                 // menu: '#menu',
                 // scrollingSpeed: 1000
             });
@@ -35,7 +35,7 @@
     <!--Dit is het navigatiemenu links boven -->
     <ul id="menu">
         <li data-menuanchor="home"><a href="#home">Home</a></li>
-        <li data-menuanchor="De-aanloop"><a href="#section1">De aanloop</a></li>
+        <li data-menuanchor="Voortraject"><a href="#section1">Het Voortraject</a></li>
         <li data-menuanchor="OCA"><a href="#section2">OCA</a></li>
         <li data-menuanchor="Zomerproject"><a href="#section3">Zomerproject</a></li>
         <li data-menuanchor="Praktijkopdracht"><a href="#section4">Praktijkopdracht</a></li>
@@ -55,12 +55,11 @@
         <!-- Hier begint de eerste sectie, met sliders -->
         <div class="section" id="section1">
             <div class="slide active">
-                <div class="voortraject">
+                <div class="Voortraject">
                     <h1>Het Voortraject</h1>
                     <br/>
                     <p>Om tot geschikte kandidaten voor de opleiding te komen heeft</p>
-                    <p>een voortraject plaatsgevonden, waar uit de vele geïnteresseerden</p>
-                    <p>uiteindelijk 12 personen werden geselecteerd</p>
+                    <p>een voortraject plaatsgevonden, waaruit 12 personen werden geselecteerd</p>
                     <br/>
                     <div class="button">Selectie</div><br>
                     <div class="button">Bootcamp</a>
