--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h1>Programmeer-bootcamp</h1>
                     <p>Het doel van de drie daagse bootcamp was het<br/> testen van de aanleg van de kandidaten
                     </p>
-                    <img id="bootcamp" src="imgs/bootcamp.jpg" alt="Teamfoto Ardennen" /><br/>
+                    <img src="imgs/bootcamp.jpg" class="plaatje" alt="Bootcamp" /><br/>
                     <div class="button-sm">Voorbereiding</div><br/>
                     <div class="button-sm">Eerste lessen</div><br/>
                     <div class="button-sm">Eerste opdrachten</div><br/>
@@ -134,7 +134,7 @@
             <div class="slide">
                 <h1>Program flow</h1>
                 <p>Hoe zorg je ervoor dat je website interactief is</p>
-                <p>en de juist informatie laat zien op het juiste moment?</p>
+                <p>en de juiste informatie laat zien op het juiste moment?</p>
                 <p>Bijvoorbeeld: Event handling, callbacks (Websocket API, AJAX),</p>
                 <p>JQuery, Webworkers</p>
             </div>
