Paar slides over praktijkopdracht

--- a/index.html
+++ b/index.html
@@ -168,11 +168,16 @@
                 <img src="imgs/theorie-praktijk-22728511.jpg" alt="Architectuur">
             </div>
             <div class="slide">
-                <h1>Doelen</h1>
+                <h1>Onderwerpen</h1>
                 <ol>
-                    <li>1. Kennis binnen ProgramIt opbouwen</li>
-                    <li>2. Genereren van lesmateriaal - recursieve didactiek</li>
+                    <li>1. Architectuur</li>
+                    <li>2. Tools & Technologies</li>
+                    <li>3. Demo</li>
                 </ol>
+            </div>
+            <div class="slide">
+                <h1>Architectuur</h1>
+                <img src="imgs/Application_Overview_2016-10-24.svg" alt="Architectuur">
             </div>
         </div>
 
