--- a/index.html
+++ b/index.html
@@ -93,8 +93,38 @@
 
 		<!-- Start of section 2 -->
         <div class="section" id="section2">
-            <h1>OCA Examen</h1>
+            <div class="slide active">
+                <h1>OCA & Scrum</h1>
+                <div class="button-sm">Lessen</div><br/>
+                <div class="button-sm">Agile / Scrum</div><br/>
+                <div class="button-sm">OCA SE7 1Z0-803 examen</div><br/>
+            </div>
+
+            <div class="slide">
+                <h1>Lessen in OCA</h1>
+                <img src="imgs/OCAboek.jpg" alt="OCA boek">
+            </div>
+
+            <div class="slide">
+                <img id="scrumitlogo" src="imgs/scrumit.jpeg" alt="ScrumIT logo">
+                <br/>
+                <br/>
+                <h1>Agile / Scrum</h1>
+                <br/>
+                <div class="button-sm">ScrumIT</div><br/>
+                <div class="button-sm">scrum.org - Scrummaster I examen</div><br/>
+                <br/>
+                <img id="scrumitactie" src="imgs/scrumactie.jpg" alt="Scrumtraining">
+            </div>
+
+            <div class="slide">
+                <h1>OCA SE7 1Z0-803 examen</h1>
+                <div class="button-sm">Oracle</div><br/>
+                <div class="button-sm">OCA SE7 1Z0-803 examen</div><br/>
+                <img src="imgs/ocacertificate.png" alt="Official Oracle OCA certificate" id="ocaCert">
+            </div>
         </div>
+            
 		<!--End of section 2 -->
 
 		<!-- Start of section 3 -->
