aanpassing frontend intro

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <img src="imgs/70-480_boek.jpg" alt="70-480 Examenboek">
             </div>
             <div class="slide">
-                <h1>Doelen</h1>
+                <h1>Doelen</h1>w
                 <ol>
                     <li>1. Kennis binnen ProgramIt opbouwen</li>
                     <li>2. Genereren van lesmateriaal - recursieve didactiek</li>
@@ -208,7 +208,8 @@
             </div>
 
             <div class="slide">
-                <h1>Angular2</h1>
+                <h1>Angular2 components</h1>
+                <h1>Bootstrap styling en layout</h1>
             </div>
 
             <div class="slide">
