--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <img src="imgs/70-480_boek.jpg" alt="70-480 Examenboek">
             </div>
             <div class="slide">
-                <h1>Doelen</h1>w
+                <h1>Doelen</h1>
                 <ol>
                     <li>1. Kennis binnen ProgramIt opbouwen</li>
                     <li>2. Genereren van lesmateriaal - recursieve didactiek</li>
