commit after merge with develop

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li data-menuanchor="Voortraject"><a href="#section1">Het Voortraject</a></li>
         <li data-menuanchor="OCA"><a href="#section2">OCA</a></li>
         <li data-menuanchor="Zomerproject"><a href="#section3">Zomerproject</a></li>
-        <li data-menuanchor="Praktijkopdracht"><a href="#section4">Praktijkopdracht</a></li>
+        <li data-menuanchor="Bedrijfsopdracht"><a href="#section4">Bedrijfsopdracht</a></li>
         <li data-menuanchor="Vragen"><a href="#section5">Vragen</a></li>
         <li data-menuanchor="Smoelenboek"><a href="#section6">De Javanen</a></li>
     </ul>
@@ -206,11 +206,11 @@
         <!-- start of section 4 -->
         <div class="section" id="section4">
             <div class="slide">
-                <h1>Praktijkopdracht</h1>
+                <h1>Bedrijfsopdracht</h1>
                 <p>Kennismaken en ervaring opdoen met</p>
                 <p>actuele tools en technieken</p>
                 </br>
-                <img src="imgs/theorie-praktijk-22728511.jpg" alt="Praktijk">
+                <img src="imgs/theorie-praktijk-22728511.jpg" alt="Bedrijfsopdracht">
             </div>
 
             <div class="slide">
@@ -240,8 +240,8 @@
                     <- REST -> Spring - JPA</h2>
             </div>
             <div class="slide">
-                <h1>Klassediagram</h1>
-                <img class="foto" src="imgs/UML_Liebregts-2016-10-20.png" alt="Klassediagram">
+                <h1>Klassendiagram</h1>
+                <img class="foto" src="imgs/UML_Liebregts-2016-10-20.png" alt="Klassendiagram">
             </div>
 
             <div class="slide">
