Werk aan bedrijfsopdracht...

--- a/index.html
+++ b/index.html
@@ -221,15 +221,19 @@
                 <h2>Naam - Oriëntatie - Foto - Afmetingen - Onderhoudscyclus - Prijs</h2>
             </div>
             <div class="slide">
+                <h1>Klassendiagram</h1>
+                <img class="foto" src="imgs/UML_Liebregts-2016-10-20.png" alt="Klassendiagram">
+            </div>
+            <div class="slide">
                 <h1>Architectuur</h1>
                 <img src="imgs/Application_Overview_2016-10-24.svg" alt="Architectuur">
                 <h2>Angular2 - Bootstrap <- REST -> Spring - JPA</h2>
             </div>
             <div class="slide">
-                <h1>Klassendiagram</h1>
-                <img class="foto" src="imgs/UML_Liebregts-2016-10-20.png" alt="Klassendiagram">
+                <h1>MVC</h1>
+                <img src="imgs/Application_Overview_2016-10-24.svg" alt="MVC">
+                <h2></h2>
             </div>
-
             <div class="slide">
                 <h1>Tools & Technologies</h1>
                 <img class="foto" src="imgs/logo overview.png" alt="Overzicht logo's'">
