added ardennenweek slide and changed first slide

--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@
     </ul>
 
     <div id="fullpage">
-
         <div class="section active" id="home">
-
-            <h1> Eindhoven Java 2 <img class="headerlogo" src="imgs/programitlogo152x77.png" alt="ProgramIT logo" /></h1>
+            <h1> Welkom bij ProgramIT </h1>
+            <br><br>
+            <img class="headerlogo" src="imgs/programitlogo152x77.png" alt="ProgramIT logo" />
             <input type="hidden" name="id" value="1" />
-            <img class="foto" src="imgs/teamfotoArdennen.jpg" alt="Teamfoto Ardennen" />
         </div>
 
         <!-- Hier begint de eerste sectie, met sliders -->
@@ -90,6 +89,13 @@
                     <div class="button">Eerste opdrachten</div><br/>
                 </div>
             </div>
+
+            <div class="slide">
+                <h1>Ardennenweek</h1>
+                <div class="button">Persoonlijke ontwikkeling</div>
+                <div class="button">Teambuilding</div><br/>
+                <img class="foto" src="imgs/teamfotoArdennen.jpg" alt="Teamfoto Ardennen" />
+            </div>
         </div>
         <!--End of section 1 -->
 
@@ -108,6 +114,13 @@
             </div>
 
             <div class="slide">
+                <h1>OCA SE7 1Z0-803 examen</h1>
+                <div class="button">Oracle</div><br/>
+                <div class="button">OCA SE7 1Z0-803 examen</div><br/>
+                <img src="imgs/ocacertificate.png" alt="Official Oracle OCA certificate" id="ocaCert">
+            </div>
+
+            <div class="slide">
                 <img id="scrumitlogo" src="imgs/scrumit.jpeg" alt="ScrumIT logo">
                 <br/>
                 <br/>
@@ -119,12 +132,7 @@
                 <img id="scrumitactie" src="imgs/scrumactie.jpg" alt="Scrumtraining">
             </div>
 
-            <div class="slide">
-                <h1>OCA SE7 1Z0-803 examen</h1>
-                <div class="button">Oracle</div><br/>
-                <div class="button">OCA SE7 1Z0-803 examen</div><br/>
-                <img src="imgs/ocacertificate.png" alt="Official Oracle OCA certificate" id="ocaCert">
-            </div>
+
         </div>
 
         <!--End of section 2 -->
@@ -132,7 +140,7 @@
         <!-- Start of section 3 -->
         <div class="section" id="section3">
 
-            <div class="slide">
+            <div class="slide active">
                 <h1>Zomerproject</h1>
                 <p>Samenwerking tussen Eindhoven en Enschede</p>
                 <p>70-480 certificering: HTML5, Javascript, CSS3</p>
