--- a/index.html
+++ b/index.html
@@ -245,8 +245,9 @@
             </div>
             <div class="slide">
                 <h1>MVC</h1>
-                <img src="imgs/Application_Overview_2016-10-24.svg" alt="MVC">
-                <h2></h2>
+                </br>
+                <h2>In de app zijn Model, View en Control onafhankelijk van elkaar.</h2>
+                <h2>De User Interface en database kunnen eenvoudig worden vervangen door andere.</h2>
             </div>
             <div class="slide">
                 <h1>Tools & Technologies</h1>
