Change background color Angular2 code snippets to white

--- a/index.html
+++ b/index.html
@@ -269,24 +269,24 @@
 
             <div class="slide">
                 <p>De knop</p><br/>
-                <img src="imgs/angular2_01.png" class="codesnippet" alt="Gebouw toevoegen">
+                <img src="imgs/angular2_01_wit.png" class="codesnippet" alt="Gebouw toevoegen">
                 <p>Formulier laten zien</p><br/>
-                <img src="imgs/angular2_02.png" class="smallcodesnippet" alt="Formulier laten zien"><br/><br/>
+                <img src="imgs/angular2_02_wit.png" class="smallcodesnippet" alt="Formulier laten zien"><br/><br/>
             </div>
 
             <div class="slide">
                 <p>Het formulier:</p><br/>
-                <img src="imgs/angular2_03.png" class="codesnippet" alt="Gebouw toevoegen">
+                <img src="imgs/angular2_03_wit.png" class="codesnippet" alt="Gebouw toevoegen">
             </div>
 
             <div class="slide">
                 <p>Informatie overdracht:</p><br/>
-                <img src="imgs/angular2_04.png" class="codesnippet" alt="Gebouw toevoegen">
+                <img src="imgs/angular2_04_wit.png" class="codesnippet" alt="Gebouw toevoegen">
             </div>
 
             <div class="slide">
                 <p>De service</p><br/>
-                <img src="imgs/angular2_05.png" class="codesnippet" alt="Gebouw toevoegen">
+                <img src="imgs/angular2_05_wit.png" class="codesnippet" alt="Gebouw toevoegen">
             </div>
 
             <div class="slide">
