changed background colors on first two sections

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         $(document).ready(function() {
 
             $('#fullpage').fullpage({
-                sectionsColor: ['lightgreen', 'aqua', '#5AB1BB', '#579f2a', '#93c6d6', '#2998ce', '#2998ce'],
+                sectionsColor: ['#0B5563', '#71B48D', '#5AB1BB', '#579f2a', '#93c6d6', '#2998ce', '#5AB1BB'],
                 // anchors: ['home', 'Voortraject', 'OCA', 'Zomerproject', 'Praktijkopdracht', 'Smoelenboek'],
                 // menu: '#menu',
                 // scrollingSpeed: 1000
@@ -47,7 +47,7 @@
         <div class="section active" id="home">
             <h1> Welkom bij ProgramIT </h1>
             <br><br>
-            <img class="headerlogo" src="imgs/programitlogo152x77.png" alt="ProgramIT logo" />
+            <img class="headerlogo" src="imgs/programIT_logo_large.jpg" alt="ProgramIT logo" />
             <input type="hidden" name="id" value="1" />
         </div>
 
@@ -57,13 +57,8 @@
                 <div class="Voortraject">
                     <h1>Het Voortraject</h1>
                     <br/>
-                    <p>Om tot geschikte kandidaten voor de opleiding te komen heeft</p>
-                    <p>een voortraject plaatsgevonden, waar uit de vele geïnteresseerden</p>
-                    <p>uiteindelijk 12 personen werden geselecteerd</p>
-                    <br/>
                     <div class="button">Selectie</div><br>
-                    <div class="button">Bootcamp</a>
-                    </div><br>
+                    <div class="button">Bootcamp</div><br>
                     <div class="button">Ardennenweek</div><br>
                 </div>
             </div>
@@ -84,8 +79,8 @@
                     <p>Het doel van de drie daagse bootcamp was het<br/> testen van de aanleg van de kandidaten
                     </p>
                     <img src="imgs/bootcamp.jpg" class="plaatje" alt="Bootcamp" /><br/>
-                    <div class="button">Voorbereiding</div><br/>
-                    <div class="button">Eerste lessen</div><br/>
+                    <div class="button">Voorbereiding</div>
+                    <div class="button">Eerste lessen</div>
                     <div class="button">Eerste opdrachten</div><br/>
                 </div>
             </div>
@@ -104,8 +99,9 @@
             <div class="slide active">
                 <h1>OCA & Scrum</h1>
                 <div class="button">Lessen</div><br/>
-                <div class="button">Agile / Scrum</div><br/>
                 <div class="button">OCA SE7 1Z0-803 examen</div><br/>
+                <div class="button">Agile / Scrum</div><br/>
+
             </div>
 
             <div class="slide">
@@ -294,7 +290,6 @@
         <!-- start of section 5 -->
         <div class="section" id="section5">
             <h1>Vragen...</h1>
-            <input type="hidden" name="id" value="1" />
             <img class="foto" src="imgs/vragen.png" alt="Vragen" />
         </div>
         <!--End of section 5 -->
