Aanpassing onderwerpen frontend

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <li>1. Opdracht</li>
                     <li>2. Architectuur</li>
                     <li>3. Tools & Technologies</li>
-                    <li>4. Demo</li>
+                    <li>4. Frontend & Demo</li>
                 </ol>
             </div>
 
