--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
             <div class="slide">
                 <h2>De knop</h2><br/>
-                <img src="imgs/angular2_01_wit.png" class="codesnippet" alt="Gebouw toevoegen">
+                <img src="imgs/angular2_01_wit.png" class="othercodesnippet" alt="Gebouw toevoegen">
                 <h2>Formulier laten zien</h2><br/>
                 <img src="imgs/angular2_02_wit.png" class="smallcodesnippet" alt="Formulier laten zien"><br/><br/>
             </div>
