--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <div class="button">SEO</div>
                 <div class="button">Canvas</div>
                 <div class="button">SVG</div>
-                <div class="button">Geocache</div>
+                <div class="button">GeoLocation</div>
                 <br>
                 <img src="imgs/HTML5.png" class="plaatje" alt="HTML5 semantische mark-up">
 
