Intelligentietest -> Technisch assessment

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <br/>
                     <div class="button">Motivatie</div><br/>
                     <div class="button">Persoonlijkheidstest</div><br/>
-                    <div class="button">Intelligentietest</div><br/>
+                    <div class="button">Technisch assessment</div><br/>
                 </div>
             </div>
 
